syntax = "proto3";

option go_package = "./tutorialpb";

package email;

// The email service definition.
service Email {
  // Sends an email
  rpc SendEmail (EmailRequest) returns (EmailReply);
}

// The request message containing the email content.
message EmailRequest {
  string address = 1;
  string subject = 2;
  string content = 3;
}

// The response message.
message EmailReply {
  bool success = 1;
}
